--- a/cap11/ex11_1.html
+++ b/cap11/ex11_1.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
@@ -86,6 +82,7 @@
               </div>
             </div>
           </form>
+          <pre class="mt-3"></pre>
         </div>
       </div>
     </div>
